--- a/HorasComplementares/web/css/style.css
+++ b/HorasComplementares/web/css/style.css
@@ -18,6 +18,21 @@
     width: 24px;
     color: #2e7d32;
 }
+.side-nav li > a > i.icon-horas-complementares {
+    font-size: 35px;
+    float: left;
+    line-height: 48px;
+    margin: 0 32px 0 0;
+    margin-top: 7px;
+    position: relative;
+    left: -10px;
+    width: 24px;
+    color: #2e7d32;
+}
+
+.fixed-action-btn a > i.icon-horas-complementares{
+    font-size: 38px;
+}
 
 .centralizar-icons.small{
     position: relative;
@@ -104,4 +119,47 @@ main {
 }
 .icon-block .material-icons {
   font-size: inherit;
+}
+
+
+/* Configuração do Step By Step utilizado no cadastro de uma nova atividade*/
+
+.stepwizard-step p {
+    margin-top: 10px;
+}
+.stepwizard-row {
+    display: table-row;
+}
+.stepwizard {
+    display: table;
+    width: 50%;
+    position: relative;
+}
+.stepwizard-step button[disabled] {
+    opacity: 1 !important;
+    filter: alpha(opacity=100) !important;
+}
+.stepwizard-row:before {
+    top: 14px;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+    z-order: 0;
+}
+.stepwizard-step {
+    display: table-cell;
+    text-align: center;
+    position: relative;
+}
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
 }
